--- a/24H_01_init_to_hardware/.settings/org.eclipse.core.resources.prefs
+++ b/24H_01_init_to_hardware/.settings/org.eclipse.core.resources.prefs
@@ -5,6 +5,8 @@ encoding//Debug/hardware/subdir_rules.mk=UTF-8
 encoding//Debug/hardware/subdir_vars.mk=UTF-8
 encoding//Debug/makefile=UTF-8
 encoding//Debug/objects.mk=UTF-8
+encoding//Debug/pid/subdir_rules.mk=UTF-8
+encoding//Debug/pid/subdir_vars.mk=UTF-8
 encoding//Debug/sources.mk=UTF-8
 encoding//Debug/subdir_rules.mk=UTF-8
 encoding//Debug/subdir_vars.mk=UTF-8
