--- a/24H_01_init_to_hardware/.settings/org.eclipse.core.resources.prefs
+++ b/24H_01_init_to_hardware/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,8 @@
 eclipse.preferences.version=1
 encoding//Debug/OLED/subdir_rules.mk=UTF-8
 encoding//Debug/OLED/subdir_vars.mk=UTF-8
+encoding//Debug/delay/subdir_rules.mk=UTF-8
+encoding//Debug/delay/subdir_vars.mk=UTF-8
 encoding//Debug/hardware/subdir_rules.mk=UTF-8
 encoding//Debug/hardware/subdir_vars.mk=UTF-8
 encoding//Debug/makefile=UTF-8
