--- a/24H_01_init_to_hardware/Debug/makefile
+++ b/24H_01_init_to_hardware/Debug/makefile
@@ -14,7 +14,7 @@ ORDERED_OBJS += \
 "./main.o" \
 "./ti_msp_dl_config.o" \
 "./startup_mspm0g350x_ticlang.o" \
-"./OLED/oled.o" \
+"./Sys/delay.o" \
 "./hardware/bluetooth.o" \
 "./hardware/grayscale.o" \
 "./hardware/gyroscpe.o" \
@@ -32,11 +32,11 @@ RMDIR := RMDIR /S/Q
 # All of the sources participating in the build are defined here
 -include sources.mk
 -include subdir_vars.mk
--include OLED/subdir_vars.mk
+-include Sys/subdir_vars.mk
 -include hardware/subdir_vars.mk
 -include pid/subdir_vars.mk
 -include subdir_rules.mk
--include OLED/subdir_rules.mk
+-include Sys/subdir_rules.mk
 -include hardware/subdir_rules.mk
 -include pid/subdir_rules.mk
 -include objects.mk
@@ -169,8 +169,8 @@ all: $(OBJS) $(GEN_CMDS)
 # Other Targets
 clean:
 	-$(RM) $(GEN_MISC_FILES__QUOTED)$(BIN_OUTPUTS__QUOTED)$(GEN_FILES__QUOTED)$(EXE_OUTPUTS__QUOTED)
-	-$(RM) "isr.o" "main.o" "ti_msp_dl_config.o" "startup_mspm0g350x_ticlang.o" "OLED\oled.o" "hardware\bluetooth.o" "hardware\grayscale.o" "hardware\gyroscpe.o" "hardware\motor.o" "pid\pid.o" 
-	-$(RM) "isr.d" "main.d" "ti_msp_dl_config.d" "startup_mspm0g350x_ticlang.d" "OLED\oled.d" "hardware\bluetooth.d" "hardware\grayscale.d" "hardware\gyroscpe.d" "hardware\motor.d" "pid\pid.d" 
+	-$(RM) "isr.o" "main.o" "ti_msp_dl_config.o" "startup_mspm0g350x_ticlang.o" "Sys\delay.o" "hardware\bluetooth.o" "hardware\grayscale.o" "hardware\gyroscpe.o" "hardware\motor.o" "pid\pid.o" 
+	-$(RM) "isr.d" "main.d" "ti_msp_dl_config.d" "startup_mspm0g350x_ticlang.d" "Sys\delay.d" "hardware\bluetooth.d" "hardware\grayscale.d" "hardware\gyroscpe.d" "hardware\motor.d" "pid\pid.d" 
 	-@echo 'Finished clean'
 	-@echo ' '
 
